@@ -15,7 +15,7 @@
   "definitions/entityAssets/plantEntityAssets.json" : -5295972566114544423,
   "definitions/entityAssets/renderLayers.json" : -1163552902139591673,
   "definitions/entityAssets/wallCapAssets.json" : -2480847880312535631,
-  "definitions/materials.json" : -167222721608966794,
+  "definitions/materials.json" : 6080874864131105647,
   "definitions/particles/*.p" : -4179421882168176027,
   "definitions/plantColorSwatches/*.png" : 5439417682328887432,
   "definitions/shaders/*.glsl" : 2152534794052923686,
