@@ -6,7 +6,7 @@
   },
   {
     "materialName": "Snowfall",
-    "materialType": "OTHER"
+    "materialType": "LIQUID"
   },
 
   {
