@@ -41,6 +41,7 @@ import java.util.Set;
 import static technology.rocketjump.undermount.entities.model.physical.plant.PlantSpeciesGrowthStage.PlantSpeciesHarvestType.FARMING;
 import static technology.rocketjump.undermount.environment.model.Season.WINTER;
 import static technology.rocketjump.undermount.jobs.model.JobState.REMOVED;
+import static technology.rocketjump.undermount.materials.model.GameMaterialType.LIQUID;
 
 public class FarmPlotBehaviour extends RoomBehaviourComponent implements JobCreatedCallback, Prioritisable {
 
@@ -215,8 +216,8 @@ public class FarmPlotBehaviour extends RoomBehaviourComponent implements JobCrea
 	}
 
 	private boolean tileNeedsTilling(MapTile tile, GameContext gameContext, MessageDispatcher messageDispatcher) {
-		if (gameContext.getGameClock().getCurrentSeason().equals(WINTER)) {
-			// Just don't till in winter to avoid conflicting with snow cover
+		if (gameContext.getGameClock().getCurrentSeason().equals(WINTER) || tile.getFloor().getMaterial().getMaterialType().equals(LIQUID)) {
+			// Just don't till in winter to avoid conflicting with snow cover (LIQUID type is snow cover)
 			return false;
 		}
 
